# ai-project-metrics-bmad

./: .gitignore  CLAUDE.md  README.md  project-context.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-1-create-the-story-manifest-via-docs-only-kickoff.md  1-10-installmd-documents-the-confluence-flow.md  1-2-project-level-source-of-truth-configuration.md  1-3-jira-adapter-auto-fills-kickoff.md  1-4-confluence-adapter-auto-fills-kickoff.md  1-5-kickoff-manifest-declares-which-ai-tool-is-in-use.md  1-6-jira-adapter-fetches-via-the-atlassian-remote-mcp-server.md  1-7-docs-only-kickoff-reads-a-requirements-doc-and-relaxes-sprint-for-ad-hoc-teams.md  1-8-confluence-adapter-fetches-via-the-atlassian-remote-mcp-server.md  1-9-jira-confluence-plain-ask-fallback-wrongly-offered-none-sprint.md  2-1-hook-installation-is-a-single-repeatable-setup-step.md  2-10-a-closed-storys-manifest-doesnt-block-the-next-storys-kickoff.md  2-11-setup-enforces-gitignore-for-local-capture-state.md  2-12-dry-run-mode-for-snapshot-assembler.md  2-2-git-activity-captured-silently-while-you-work.md  2-3-ai-session-activity-captured-silently.md  2-4-story-closes-and-a-snapshot-is-created-automatically.md  (+36 more)
docs/: architecture-diagram-leadership.html  flow-diagrams.md  metrics.md  new-machine-onboarding.html  problem-statement.txt
prompts/: conversation-summary.md  skill-prompts.md
pypi-package/: README.md  pyproject.toml  sync_bundle.py
tests/: test_setup_hooks.py
tools/: setup-hooks.py
(+80 files in other folders)
